--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -1,1 +1,40 @@
 /*Schrijf hier jouw CSS*/
+
+
+.body2{
+
+    display: flex;
+    flex: auto;
+
+}
+
+.col-1{
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+
+}
+.col-2{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 4;
+    flex-shrink: 1;
+
+}
+
+.header2{
+    display: flex;
+    flex-basis: 100px;
+}
+
+.article-2{
+    flex-wrap: wrap;
+    flex-basis: 500px;
+}
+
+.footer2{
+
+    flex-basis: 110px;
+}
