--- a/deel-2-flexbox-layout/opdracht-4/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-4/styles/styles.css
@@ -1,1 +1,47 @@
 /*Schrijf hier jouw CSS*/
+
+.body4{
+    display: flex;
+    flex-basis: auto;
+}
+.outer-col-1{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 300px;
+}
+.outer-col-2{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 1300px;
+
+}
+.header-4{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100px;
+}
+.inner-row{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 600px;
+}
+.inner-col{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 1000px;
+}
+.article-4{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 520px;
+}
+.footer-4{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100px;
+}
+.aside-4{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 300px;
+}
